Tue Jun 23 19:49:52 EDT 2009	JK Lowden <jklowden@freetds.org>
	* doc/htdoc/news.html added HP/UX news

Sat Jun 20 17:57:22 EDT 2009	JK Lowden <jklowden@freetds.org>
	* CVSROOT/config removed local keyword because not supported

Fri Jun 19 09:50:29 EDT 2009	JK Lowden <jklowden@freetds.org>
	* ChangeLog testing local keyword expansion

Fri Jun 19 09:49:26 EDT 2009	JK Lowden <jklowden@freetds.org>
	* CVSROOT/config added $FreeTDS$ local keyword

Wed Jun 17 19:07:24 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/iconv.c: reuse some macros for version check

Wed Jun 17 18:20:53 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/iconv.c: fix iconv portability problem

Fri Jun 12 10:53:39 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/convert_tds2sql.c:
	* src/odbc/unittests/data.c src/tds/convert.c src/tds/tds_checks.c:
	* src/tds/token.c:
	- improve variant support if --enable-developing

Wed Jun 10 20:54:07 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c src/odbc/odbc.c src/odbc/odbc_util.c:
	- move blob check to odbc_tds2sql

Wed Jun 10 18:44:48 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c: limit indentation

Tue Jun  9 10:54:29 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/datacopy.c src/ctlib/blk.c src/ctlib/cs.c:
	* src/ctlib/ct.c src/odbc/connectparams.c src/odbc/descriptor.c:
	* src/pool/main.c src/pool/member.c src/tds/challenge.c:
	* src/tds/iconv.c src/tds/token.c:
	- use calloc instead of malloc and memset

Tue Jun  9 08:49:43 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/cs.c src/ctlib/ct.c src/tds/convert.c src/tds/data.c:
	- revert Andrew Victor patch

Mon Jun  8 21:54:55 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/ctlib.h src/ctlib/blk.c src/ctlib/ct.c:
	- make _ct_get_client_type call shorter

Mon Jun  8 21:39:32 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>